src/css/custom.css
@import "tailwindcss";
@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

/* Navbar general styling */
.navbar {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* subtle shadow for depth */
  padding: 0 2rem; /* add horizontal padding */
}

/* Navbar Logo */
.navbar__logo {
  height: 40px; /* adjust logo size if needed */
}

/* Navbar items spacing and font */
.navbar__item {
  font-weight: 500;
  margin: 0 10px;
  transition: all 0.2s ease-in-out;
}

/* Hover effect for navbar items */
.navbar__item:hover {
  transform: translateY(-2px);
  text-decoration: none;
  border-bottom: 2px solid var(--ifm-color-primary);
}

/* Space between left and right navbar items */
.navbar__items--right {
  margin-left: auto;
}

:root {
  --ifm-color-primary: #8a4dff;
  --ifm-color-primary-dark: #7a3dff;
  --ifm-color-primary-darker: #6b2eff;
  --ifm-color-primary-darkest: #5a1de6;
  --ifm-color-primary-light: #9b5dff;
  --ifm-color-primary-lighter: #ac6dff;
  --ifm-color-primary-lightest: #bd7dff;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #8a4dff;
  --ifm-color-primary-dark: #7a3dff;
  --ifm-color-primary-darker: #6b2eff;
  --ifm-color-primary-darkest: #5a1de6;
  --ifm-color-primary-light: #9b5dff;
  --ifm-color-primary-lighter: #ac6dff;
  --ifm-color-primary-lightest: #bd7dff;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.footer {
  background-color: #8a4dff;
  color: #f0f0f0;
}

/* Dark theme footer */
[data-theme="dark"] .footer {
  background-color: #18181b; /* or any dark background you want */
  color: #f0f0f0;
}

.footer a:hover {
  color: #d1b3ff; /* A lighter shade for hover, visible on purple */
}

.quizBtn {
  color: black;
  padding: 15px;
  margin-top: 5px;
  border: 1px solid white;
  border-radius: 8px;
  font-size: 15px;
  background-color: white;
  transition: transform 0.1s ease background-color 0.2s ease;
}

.quizBtn:active {
  transform: scale(0.95);
}

.quizBtn:hover {
  transform: scale(1.05);
  background-color: #d1b3ff;
}

.quizContainer {
  background-color: #8a4dff;
  color: white;
}

.quizContainer input[type="radio"] {
  accent-color: green; 
  color: white;
  background-color: white;
}

.questionContainer {
  margin-bottom: 20px;
}

.resultLabel {
  margin-top: 5px;
}

body {
  font-family: "Lora";
}

